--- a/Day4/.vscode/launch.json
+++ b/Day4/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Day4/bin/Debug/net5.0/Day4.dll",
+            "program": "${workspaceFolder}/bin/Debug/net5.0/Day4.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Day4",
+            "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
